--- a/build.gradle
+++ b/build.gradle
@@ -41,7 +41,10 @@ dependencies {
     implementation 'org.apache.curator:curator-recipes:5.1.0'
     testImplementation 'org.apache.curator:curator-test:5.1.0'
 
+    implementation 'com.101tec:zkclient:0.11'
+
     implementation 'org.apache.zookeeper:zookeeper:3.7.0'
+
 }
 
 test {
