create node finished.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,4 @@ zookeeper.maxRetries=3
 zookeeper.baseSleepTimeMs=1000
 logging.config=classpath:logback-spring.xml
 media.server.host=${MEDIA_HOST}
+media.server.recreateTimeSec=5
