--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
+server.port=8080
+server.servlet.context-path=/
+
 zookeeper.connectString=${ZK_URL}
 zookeeper.maxRetries=3
 zookeeper.baseSleepTimeMs=1000
