--- a/deploy/application.properties
+++ b/deploy/application.properties
@@ -11,5 +11,5 @@ media.server.host=${MEDIA_HOST}
 media.server.recreateTimeSec=5
 media.server.monitorPeriodSec=2
 
-module.monitor=false
-module.manager=true
+module.monitor=true
+module.manager=false
