--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,12 @@ dependencies {
     implementation 'com.google.guava:guava:30.1.1-jre'
     implementation 'io.vavr:vavr:0.10.3'
 
+    implementation 'org.apache.httpcomponents.client5:httpclient5:5.0.3'
+    implementation 'org.apache.httpcomponents.client5:httpclient5-fluent:5.0.3'
+    implementation 'org.apache.httpcomponents.client5:httpclient5-cache:5.0.3'
+    implementation 'org.apache.httpcomponents.client5:httpclient5-win:5.0.3'
+    testImplementation 'org.apache.httpcomponents.client5:httpclient5-testing:5.0.3'
+
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
     testCompileOnly 'org.projectlombok:lombok'
